Add intro and references from Paolo

--- a/cereals-network-article.Rmd
+++ b/cereals-network-article.Rmd
@@ -1,6 +1,5 @@
 ---
 title: "Shifting risks in increasingly globalized food trade networks"
-date: "12/12/2015"
 output:
     pdf_document:
         fig_caption: yes
@@ -28,6 +27,16 @@ source("tfs_cascade_funcs.R")
 source("tfs_map_funcs.R")
 source("res_00_funcs.R")
 ```
+
+# Introduction
+
+Country-scale food availability depends on domestic production, reserves, and the trade of food and feed. Recent research has highlighted how, presently, about 24% of the food that is consumed worldwide is available through international trade [e.g., @dodorico2014]. Likewise, 24% of the global agricultural land [@weinzettel2013] and 23% of the freshwater resources used for food production [@dodorico2013] are accessed through trade. Trade dependency has substantially increased in the last few decades and more than doubled since the mid-1980s [@porkka2013;  @dodorico2014] likely as a result of liberalization and the associated removal of subsidies and trade protections in developing countries [e.g., @shafaeddin2005]. The impact of such a neoliberal restructuring of trade on economic development and food security has been the focus of an intense debate on whether it favors technological and economic advancement or trade dependency in the developing world. It has been argued that it may allow for an influx of cheap subsidized food commodities from more developed countries, thereby displacing smallholder farmers, undermining rural livelihoods, and enhancing trade dependency in the global south [@shafaeddin2005; @deschutter2014] [Nick/Jampel: any other refs?]
+
+While the political economy of food and food trade have been discussed within the economics and political science literature, the environmental impacts of trade have only recently started to be appreciated [@meyfroidt2013; @defries2010]; likewise, the effects on the resilience of the global food system remain poorly understood [@fader2013]. The globalization of food through trade has been associated with a displacement of land use, i.e., land use change in regions far from the centers of crop consumption [@meyfroidt2013], exportation and externalization of environmental impacts such as nitrogen pollution [@galloway2007; @obannon2014], virtual water trade [@hoekstra2008], and the overall geographic disconnection between consumers and the environment that supports them [@carr2013; @mcdonald2015].  
+
+Recent studies have stressed the environmental implications of food trade in terms of loss of environmental stewardship resulting from the tele-coupling between agricultural production and consumer behavior or market volatility [@defries2010; @schmitz2012; @meyfroidt2013], and the possible emergence of patterns of ecological unequal exchange, whereby an unbalanced distribution and flow of resources and environmental impacts perpetrates conditions of uneven economic development around the world [e.g., @rice2007]. 
+It is unclear how trade might affect the resilience and reliability of food supply around the world [@dodorico2010]. While trade may alleviate conditions of food deficit in resource poor regions, it allows for the emergence of dependency whereby some countries increasingly rely on resources they do not control [e.g., @carr2013; @suweis2013]. In conditions of food crisis prices dramatically increase, leaving the poor with no or limited access to food [e.g., @deschutter2014]. Moreover, during the recent food crises (e.g., in 2008 and 2011) the governments of exporting countries have responded to food price spikes by banning food exports, thereby leaving trade dependent countries in a state of panic [e.g., @fader2013]. Export bans increase the uncertainty and unreliability of the global food markets, thereby eroding food security in trade-dependent countries. The effect of the intensification of trade on food security, however, is difficult to evaluate, particularly the short term response of food systems to shocks in production (e.g., due to crop failure) and the way such a response propagates through the global trade network. These effects are hardly captured by state-of the art economic models accounting for changes in supply and price fluctuations. In fact, such models typically assume (general or partial) equilibrium conditions that are unlikely attained in the course of a food crisis when hoarding and speculations occur while  consumers scramble and suppliers make short-term arrangements [References: Nick?]. After a major shock in production the system is expected to be out of equilibrium but the food mass balance needs to be always satisfied. We argue that the perturbation is partly absorbed locally by tapping on reserves or reducing consumption, and partly transmitted to other countries either by decreasing exports from the shock regions, or by increasing imports from existing trade partners. This approach differs from the linear stability analysis of the coupled population-food dynamics [e.g., @suweis2015] because it considers the short term response to perturbation of finite magnitude instead of considering the stability of long-term equilibrium dynamics with respect to infinitesimal perturbations. This short-term analysis ensures that each country (or group of countries) responds to a production shock by adjusting its reserves, consumption rate and trade flows while conserving the food mass balance [e.g., @puma2015]. A similar approach based on the mass balance of the water consumed for food production and virtually traded with food commodities was recently used by @tamea2016 in a model of shock propagation through the virtual water network [e.g., @carr2013]. This framework is here modified to account for the effect of food reserves and evaluate their impact on shock propagation.
+
 
 # Methods
 
