--- a/ref.bib
+++ b/ref.bib
@@ -6,12 +6,239 @@
   number={2},
   pages={e55825},
   year={2013},
-  publisher={Public Library of Science}
+  publisher={Public Library of Science},
+  doi={10.1371/journal.pone.0055825}
 }
 
-@article{fao2001,
+@article{defries2010,
+  title={Deforestation driven by urban population growth and agricultural trade in the twenty-first century},
+  author={DeFries, Ruth S and Rudel, Thomas and Uriarte, Maria and Hansen, Matthew},
+  journal={Nature Geoscience},
+  volume={3},
+  number={3},
+  pages={178--181},
+  year={2010},
+  publisher={Nature Publishing Group},
+  doi={10.1038/ngeo756}
+}
+
+@techreport{deschutter2014,
+  author={De Schutter, Oliver}, 
+  title={The transformative potential of the right to food. Report of the special Rapporteur on the right to food},
+  institution={United Nations, General Assembly, Human Rights Council},
+  year={2014},
+  month={January}
+}
+
+@article{dodorico2013,
+  title={The fourth food revolution},
+  author={D'Odorico, Paolo and Rulli, Maria Cristina},
+  journal={Nature Geoscience},
+  volume={6},
+  number={6},
+  pages={417--418},
+  year={2013},
+  publisher={Nature Publishing Group},
+  doi={10.1038/ngeo1842}
+}
+
+@article{dodorico2014,
+  title={Feeding humanity through global food trade},
+  author={D'Odorico, Paolo and Carr, Joel A and Laio, Francesco and Ridolfi, Luca and Vandoni, Stefano},
+  journal={Earth's Future},
+  volume={2},
+  number={9},
+  pages={458--469},
+  year={2014},
+  publisher={Wiley Online Library},
+  doi={10.1002/2014EF000250}
+}
+
+@article{dodorico2010,
+  title={Does globalization of water reduce societal resilience to drought?},
+  author={D'Odorico, Paolo and Laio, Francesco and Ridolfi, Luca},
+  journal={Geophysical Research Letters},
+  volume={37},
+  number={13},
+  year={2010},
+  publisher={Wiley Online Library},
+  doi={10.1029/2010GL043167}
+}
+
+@article{fader2013,
+  title={Spatial decoupling of agricultural production and consumption: quantifying dependences of countries on food imports due to domestic land and water constraints},
+  author={Fader, Marianela and Gerten, Dieter and Krause, Michael and Lucht, Wolfgang and Cramer, Wolfgang},
+  journal={Environmental Research Letters},
+  volume={8},
+  number={1},
+  pages={014046},
+  year={2013},
+  publisher={IOP Publishing},
+  doi={10.1088/1748-9326/8/1/014046}
+}
+
+@manual{fao2001,
   title={Food balance sheets: A handbook},
   author={FAO},
   year={2001},
-  publisher={Food \& Agriculture Organisation of the United Nations}
+  address={Rome},
+  organization={Food \& Agriculture Organisation of the United Nations}
 }
+
+@article{galloway2007,
+  title={International trade in meat: The tip of the pork chop},
+  author={Galloway, James N and Burke, Marshall and Bradford, G Eric and Naylor, Rosamond and Falcon, Walter and Chapagain, Ashok K and Gaskell, Joanne C and McCullough, Ellen and Mooney, Harold A and Oleson, Kirsten LL and others},
+  journal={AMBIO: A Journal of the Human Environment},
+  volume={36},
+  number={8},
+  pages={622--629},
+  year={2007},
+  publisher={BioOne},
+  doi={10.1579/0044-7447(2007)36[622:ITIMTT]2.0.CO;2}
+}
+
+@book{hoekstra2008,
+  title={Globalization of water: Sharing the planet's freshwater resources},
+  author={Hoekstra, Arjen Y and Chapagain, Ashok K},
+  year={2008},
+  publisher={Wiley Blackwell},
+  address={Malden, MA}
+}
+
+@article{meyfroidt2013,
+  title={Globalization of land use: distant drivers of land change and geographic displacement of land use},
+  author={Meyfroidt, Patrick and Lambin, Eric F and Erb, Karl-Heinz and Hertel, Thomas W},
+  journal={Current Opinion in Environmental Sustainability},
+  volume={5},
+  number={5},
+  pages={438--444},
+  year={2013},
+  publisher={Elsevier},
+  doi={10.1016/j.cosust.2013.04.003}
+}
+
+@article{obannon2014,
+  title={Globalization of agricultural pollution due to international trade},
+  author={O'Bannon, C and Carr, J and Seekell, DA and D'Odorico, P},
+  journal={Hydrology and Earth System Sciences},
+  volume={18},
+  number={2},
+  pages={503--510},
+  year={2014},
+  publisher={Copernicus GmbH},
+  doi={10.5194/hess-18-503-2014}
+}
+
+@article{porkka2013,
+  title={From food insufficiency towards trade dependency: A historical analysis of global food availability},
+  author={Porkka, Miina and Kummu, Matti and Siebert, Stefan and Varis, Olli},
+  journal={PLoS ONE},
+  volume={8},
+  number={12},
+  pages={e82714},
+  year={2013},
+  doi={10.1371/journal.pone.0082714}
+}
+
+@article{puma2015,
+  title={Assessing the evolving fragility of the global food system},
+  author={Puma, Michael J and Bose, Satyajit and Chon, So Young and Cook, Benjamin I},
+  journal={Environmental Research Letters},
+  volume={10},
+  number={2},
+  pages={024007},
+  year={2015},
+  publisher={IOP Publishing},
+  doi={10.1088/1748-9326/10/2/024007}
+}
+
+@article{rice2007,
+  title={Ecological unequal exchange: Consumption, equity, and unsustainable structural relationships within the global economy},
+  author={Rice, James},
+  journal={International Journal of Comparative Sociology},
+  volume={48},
+  number={1},
+  pages={43--72},
+  year={2007},
+  publisher={Sage Publications},
+  doi={10.1177/0020715207072159}
+}
+
+@article{sartori2015,
+  title={Connected we stand: A network perspective on trade and global food security},
+  author={Sartori, Martina and Schiavo, Stefano},
+  journal={Food Policy},
+  volume={57},
+  pages={114--127},
+  year={2015},
+  publisher={Elsevier},
+  doi={10.1016/j.foodpol.2015.10.004}
+}
+
+@conference{shafaeddin2005,
+  author={Shafaeddin, S.M.}, 
+  title={Trade liberalization and economic reform in developing countries: Structural change or de-industrialization?},
+  booktitle={United Nations Conference on Trade and Development},
+  series={Discussion Papers},
+  number={179},
+  year={2005},
+  month={April},
+  organization={United Nations}  
+}
+
+@article{schmitz2012,
+  title={Trading more food: Implications for land use, greenhouse gas emissions, and the food system},
+  author={Schmitz, Christoph and Biewald, Anne and Lotze-Campen, Hermann and Popp, Alexander and Dietrich, Jan Philipp and Bodirsky, Benjamin and Krause, Michael and Weindl, Isabelle},
+  journal={Global Environmental Change},
+  volume={22},
+  number={1},
+  pages={189--209},
+  year={2012},
+  publisher={Elsevier},
+  doi={10.1016/j.gloenvcha.2011.09.013}
+}
+
+@article{suweis2013,
+  title={Water-controlled wealth of nations},
+  author={Suweis, Samir and Rinaldo, Andrea and Maritan, Amos and D’Odorico, Paolo},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={110},
+  number={11},
+  pages={4230--4233},
+  year={2013},
+  publisher={National Acad Sciences},
+  doi={10.1073/pnas.1222452110}
+}
+
+@article{suweis2015,
+  title={Resilience and reactivity of global food security},
+  author={Suweis, Samir and Carr, Joel A and Maritan, Amos and Rinaldo, Andrea and D’Odorico, Paolo},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={112},
+  number={22},
+  pages={6902--6907},
+  year={2015},
+  publisher={National Acad Sciences},
+  doi={10.1073/pnas.1507366112}
+}
+
+@article{tamea2016,
+  title={Global effects of local food-production crises: a virtual water perspective},
+  author={Tamea, Stefania and Laio, Francesco and Ridolfi, Luca},
+  journal={Scientific Reports},
+  publisher={Nature Publishing Group},
+  note={In Press}
+}
+
+@article{weinzettel2013,
+  title={Affluence drives the global displacement of land use},
+  author={Weinzettel, Jan and Hertwich, Edgar G and Peters, Glen P and Steen-Olsen, Kjartan and Galli, Alessandro},
+  journal={Global Environmental Change},
+  volume={23},
+  number={2},
+  pages={433--438},
+  year={2013},
+  publisher={Elsevier},
+  doi={10.1016/j.gloenvcha.2012.12.010}
+}
+
